[project]
name = "mapwise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "folium>=0.20.0",
    "geopandas>=1.1.3",
    "matplotlib>=3.10.8",
    "pyogrio>=0.12.1",
    "rich>=14.3.3",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]
